# oxblend

./: .gitignore  Cargo.toml  README.md  SKILL.md
examples/: datacenter.oxb  datacenter.stl  datacenter2.oxb  datacenter2.stl  fox.glb  fox.oxb
scripts/: blender_driver.py
src/: bridge.rs  main.rs  parser.rs  scene.rs  summary.rs  view.rs
