[package]
name = "oxblend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
webbrowser = "1.0"
